<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/javaactivity_back"
    android:id="@+id/relayLayout"
    tools:context=".PythonActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/python_questions"
        android:textSize="50dp"
        android:textStyle="bold|italic"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#050C3A"
        android:gravity="center"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/sad_lottie"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/heading"
        android:layout_above="@+id/btn_question"
        app:lottie_rawRes="@raw/sad_lottie"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/happy_lottie"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/heading"
        android:layout_above="@+id/btn_question"
        app:lottie_rawRes="@raw/happy_lottie"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
    <Button
        android:id="@+id/btn_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/question_1"
        android:textColor="#050C3A"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:background="@drawable/btn_ques_background"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/next_background"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>
    <TextView
        android:id="@+id/score"
        android:text="@string/your_score_0"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>

</RelativeLayout>